# Weekend-Works

./: README
gifer/code/: ChangeLog  INSTALL  Makefile  Makefile.am  configure.ac
gifer/code/data/: gifer.desktop
gifer/code/debian/: changelog  control  copyright  gifer.manpages  gifer.menu
gifer/code/doc/: doxygen.conf
gifer/code/po/: POTFILES  POTFILES.in  es.po
gifer/code/src/: Makefile.am  gifer.cpp  gifer.h
gifer/code/src/.deps/: gifer.Po
mll/code/: INSTALL  Makefile.am  configure.ac
mll/code/debian/: changelog  control  copyright  mll.menu  rules
mll/code/src/: Makefile.am  mll.h
suerte/code/: AUTHORS  ChangeLog  INSTALL  Makefile.am  autogen.sh  configure.ac
suerte/code/data/: suerte.desktop
suerte/code/debian/: changelog  control  copyright  mll.1  mll.manpages  suerte.manpages  suerte.menu
suerte/code/po/: POTFILES  es.po
suerte/code/src/: suerte.c  suerte.h
